Bug 1187404 - Allow tab to select an option from a select element in e10s r=Enn